# crypto-trading-bot

./: .gitignore  README.md  main.py  pyproject.toml  trading_data.db
src/: __init__.py
src/analysis/: __init__.py  adaptive_risk_manager.py  ai_analyzer.py  enhanced_market_analyzer.py  multi_ai_validator.py  pattern_learner.py  post_trade_analyzer.py  risk_monitor.py
src/analysis/ai_learning/: __init__.py  ai_learning_system.py
src/analysis/portfolio/: holding_manager.py  portfolio_manager.py
src/core/: __init__.py
src/core/clients/: circuit_breaker.py  upbit_trader.py
src/core/orchestrator/: __init__.py  trading_orchestrator.py
src/data/: __init__.py
src/data/collectors/: enhanced_market_data.py
src/data/scrapers/: __init__.py  enhanced_rss_scraper.py  multi_source_scraper.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: __init__.py
src/infrastructure/database/data/: pattern_learning.db
src/shared/: __init__.py  openai_client.py
src/shared/utils/: __init__.py  analysis_state.py  data_store.py  helpers.py
tests/data/collectors/: test_enhanced_market_data.py
