[tool.poetry]
name = "upbit-auto-trading"
version = "0.1.0"
description = "An AI-powered automated cryptocurrency trading system for the Upbit exchange"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "analyzer"}, {include = "config"}, {include = "market"}, {include = "orchestrator"}, {include = "scraper"}, {include = "trader"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.9"
pyupbit = "^0.2.33"
openai = "^1.50.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
lxml = "^5.0.0"
pandas = "^2.2.0"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
plotly = "^5.17.0"
dash = "^2.17.0"
dash-bootstrap-components = "^1.5.0"
feedparser = "^6.0.11"
flask-cors = "^6.0.1"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mock = "^5.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
upbit-trader = "main:run_trading_loop"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["analyzer", "config", "market", "orchestrator", "scraper", "trader", "utils"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyupbit.*",
    "openai.*",
    "bs4.*",
]
ignore_missing_imports = true